fix #60 - fix mobile viewer quirks

--- a/viewer/index.html
+++ b/viewer/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover" />
     <title>Pyxis Documentation Viewer</title>
     <script>
       // Prevent flash of unstyled content by setting theme immediately
@@ -14,7 +14,7 @@
       })();
     </script>
   </head>
-  <body>
+  <body class="bg-white dark:bg-slate-950 antialiased overflow-x-hidden">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
